src/parser/snapshots/monkey_language_server__parser__test__let_statement_broken_6.snap
---
source: src/parser/test.rs
description: let a = @;42;
expression: result
---
[
    Err(UnexpectedToken("SyntaxError: Unexpected '@'."), (0,8)->(0,9)),
    Int {
        token: Token(Int, "42", (0,10)->(0,12)),
        value: 42,
    },
]

===================================

let a = @;42;
        ^ SyntaxError: Unexpected '@'.
